cambiar el formato de task

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -2,29 +2,13 @@
     "version": "2.0.0",
     "tasks": [
         {
-            "type": "cppbuild",
             "label": "C/C++: g++ compilar proyecto (SDL2)",
-            "command": "/usr/bin/g++",
-            "args": [
-                "-fdiagnostics-color=always",
-                "-g",
-                "*.cpp",
-                "-o",
-                "main",
-                "`sdl2-config",
-                "--cflags",
-                "--libs`"
-            ],
+            "type": "shell",
+            "command": "g++ -fdiagnostics-color=always -g *.cpp -o main $(pkg-config --cflags --libs sdl2 SDL2_image)",
             "options": {
-                "cwd": "${fileDirname}",
-                "shell": {
-                    "executable": "/bin/bash",
-                    "args": ["-c"]
-                }
+                "cwd": "${fileDirname}"
             },
-            "problemMatcher": [
-                "$gcc"
-            ],
+            "problemMatcher": ["$gcc"],
             "group": {
                 "kind": "build",
                 "isDefault": true
