corregir problema con no detectar imagen y con no poder debbugear

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,7 +2,7 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "Ejecutar main",
+            "name": "Ejecutar main (GDB)",
             "type": "cppdbg",
             "request": "launch",
             "program": "${workspaceFolder}/main",
@@ -12,6 +12,7 @@
             "environment": [],
             "externalConsole": true,
             "MIMode": "gdb",
+            "miDebuggerPath": "/usr/bin/gdb",
             "preLaunchTask": "C/C++: g++ compilar proyecto (SDL2)"
         }
     ]
